--- a/02_Scikit_learn/P2.ipynb
+++ b/02_Scikit_learn/P2.ipynb
@@ -1,8 +1,9 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "15bb3b11a2648c42",
+   "metadata": {},
    "source": [
     "# Pràctica II - Perceptron amb Scikit-learn\n",
     "\n",
@@ -26,143 +27,178 @@
     "   - Calcular la *accuracy* sobre les dades de validació.\n",
     "   - Analitzar la matriu de confusió per entendre millor els encerts i errors del model.\n",
     "   - Comparar els resultats de ``scikit-learn`` amb la vostra implementació prèvia."
-   ],
-   "id": "15bb3b11a2648c42"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "f77ef88d2fbacc18",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null,
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split"
-   ],
-   "id": "f77ef88d2fbacc18"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Podeu trobar les dades del Titanic a [Kaggle](https://www.kaggle.com/competitions/titanic/overview).",
-   "id": "55c2819c1c86f7c0"
+   "id": "55c2819c1c86f7c0",
+   "metadata": {},
+   "source": [
+    "Podeu trobar les dades del Titanic a [Kaggle](https://www.kaggle.com/competitions/titanic/overview)."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "45f95cc6b75bccce",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null,
-   "source": "df = pd.read_csv('titanic.csv')",
-   "id": "45f95cc6b75bccce"
+   "source": [
+    "df = pd.read_csv('train.csv')"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "3cbf8201ac2a8318",
+   "metadata": {},
    "source": [
     "## Neteja de dades\n",
     "\n",
     "### Codificació de variables categòriques\n",
     "\n",
-    "Farem servir la codificació *one-hot* per a les variables categòriques, ``pandas`` té una funció que ens ho facilita: ``get_dummies()``."
-   ],
-   "id": "3cbf8201ac2a8318"
+    "Farem servir la codificació *one-hot* per a les variables categòriques, ``pandas`` té una funció que ens ho facilita: ``get_dummies()``.\n",
+    "\n",
+    "Data Dictionary\n",
+    "Variable\tDefinition\tKey\n",
+    "survival \tSurvival \t0 = No, 1 = Yes\n",
+    "pclass \tTicket class \t1 = 1st, 2 = 2nd, 3 = 3rd\n",
+    "sex \tSex \t\n",
+    "Age \tAge in years \t\n",
+    "sibsp \t# of siblings / spouses aboard the Titanic \t\n",
+    "parch \t# of parents / children aboard the Titanic \t\n",
+    "ticket \tTicket number \t\n",
+    "fare \tPassenger fare \t\n",
+    "cabin \tCabin number \t\n",
+    "embarked \tPort of Embarkation \tC = Cherbourg, Q = Queenstown, S = Southampton\n",
+    "Variable Notes\n",
+    "\n",
+    "pclass: A proxy for socio-economic status (SES)\n",
+    "1st = Upper\n",
+    "2nd = Middle\n",
+    "3rd = Lower\n",
+    "\n",
+    "age: Age is fractional if less than 1. If the age is estimated, is it in the form of xx.5\n",
+    "\n",
+    "sibsp: The dataset defines family relations in this way...\n",
+    "Sibling = brother, sister, stepbrother, stepsister\n",
+    "Spouse = husband, wife (mistresses and fiancés were ignored)\n",
+    "\n",
+    "parch: The dataset defines family relations in this way...\n",
+    "Parent = mother, father\n",
+    "Child = daughter, son, stepdaughter, stepson\n",
+    "Some children travelled only with a nanny, therefore parch=0 for them."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "1653770b3a2cd691"
+   "id": "1653770b3a2cd691",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.get_dummies(df,columns=['Pclass', 'Embarked', 'Sibsp' ])"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "f85428816e316096",
+   "metadata": {},
    "source": [
     "### Eliminació de les columnes sense informació\n",
     "\n",
     "Hi ha algunes columnes que no aporten informació rellevant per a la predicció, com ara el nom del passatger o el número del bitllet. Les hem d'eliminar."
-   ],
-   "id": "f85428816e316096"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "25897648be7990c5"
+   "id": "25897648be7990c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "8fc207eb2c3aa1be",
+   "metadata": {},
    "source": [
     "### Normalitzam les dades\n",
     "\n",
     "Hem de normalitzar les dades per tal que totes les característiques tinguin la mateixa escala. Això és especialment important per a algorismes com el perceptró, que són sensibles a la magnitud de les característiques."
-   ],
-   "id": "8fc207eb2c3aa1be"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "5c44435fa00147f9"
+   "id": "5c44435fa00147f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "122c880687254839",
+   "metadata": {},
    "source": [
     "### Tractament de valors NaN\n",
     "\n",
     "Els valors NaN els hem de tractar abans d'entrenar el model. Podem optar per eliminar les files amb valors NaN o bé imputar-los amb la mitjana, mediana o moda de la columna. Pandas ens ofereix diverses funcions per fer-ho. Per exemple, podem utilitzar ``fillna()`` per imputar valors, o ``dropna()`` per eliminar files amb valors NaN."
-   ],
-   "id": "122c880687254839"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "d9cce64b0c80cb8e"
+   "id": "d9cce64b0c80cb8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "274ec24c5f7c94b1",
+   "metadata": {},
    "source": [
     "### Divisió del conjunt de dades\n",
     "\n",
     "Separarem les dades en un conjunt d'entrenament i un de validació. Això ens permetrà avaluar el rendiment del model en dades que no ha vist durant l'entrenament. S'utilitza la funció ``train_test_split()`` de ``sklearn.model_selection``."
-   ],
-   "id": "274ec24c5f7c94b1"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "72bb13186a72271d"
+   "id": "72bb13186a72271d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "8fa684e60de94a7c",
+   "metadata": {},
    "source": [
     "## Entrenament i avaluació del model\n",
     "\n",
     "Hem d'entrenar el perceptró amb les dades d'entrenament i després avaluar-lo amb les dades de validació. Hem de fer dos entrenaments, un amb la nostra implementació i un altre amb la de ``scikit-learn``. Per emprar la de ``scikit-learn``, utilitzarem la classe ``Perceptron`` de ``sklearn.linear_model``."
-   ],
-   "id": "8fa684e60de94a7c"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "99a1512fca79de3d"
+   "id": "99a1512fca79de3d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -174,14 +210,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
