--- a/08_Detecció/Detecció.ipynb
+++ b/08_Detecció/Detecció.ipynb
@@ -1,58 +1,118 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7c30a21814599e8e",
    "metadata": {
     "collapsed": true
    },
-   "cell_type": "markdown",
    "source": [
     "En aquesta pràctica treballareu amb un model de detecció d’objectes basat en PyTorch i la xarxa neuronal VGG16. L'objectiu es modificar el model per adaptar-lo a un problema de detecció d'objectes específic utilitzant un conjunt de dades simples.\n",
     "\n",
     "![Exemple](08_Detecció/imgs/img.png)\n",
     "\n",
     "Emprarem un *dataset* de detecció d'objectes que conté imatges d'estrelles. Aquest conjunt de dades és senzill i ideal per a practicar tècniques de detecció d'objectes. El podeu trobar a Kaggle al següent [enllaç](https://www.kaggle.com/datasets/kishanj/simple-object-detection). Per carregar aquest tipus de dataset haurem d'implementar una classe personalitzada que hereti de `torch.utils.data.Dataset`."
-   ],
-   "id": "7c30a21814599e8e"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "fa0e6dca86c52550",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading from https://www.kaggle.com/api/v1/datasets/download/kishanj/simple-object-detection?dataset_version_number=1...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 618k/618k [00:00<00:00, 1.39MB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting files...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path to dataset files: C:\\Users\\Miquel\\.cache\\kagglehub\\datasets\\kishanj\\simple-object-detection\\versions\\1\n"
+     ]
+    }
+   ],
    "source": [
     "from torch.utils.data import Dataset\n",
+    "import kagglehub\n",
+    "\n",
     "\n",
     "class EstrellesDataset(Dataset):\n",
     "    def __init__(self, transforms):\n",
     "        super().__init__()\n",
     "        self.transform = transforms\n",
+    "        # Download latest version\n",
+    "        path = kagglehub.dataset_download(\"kishanj/simple-object-detection\")\n",
+    "        print(\"Path to dataset files:\", path)\n",
+    "        \n",
+    "        self.imgs = []\n",
+    "        self.labels = []\n",
+    "        self.bboxes = []\n",
+    "        # Load images and annotations\n",
     "        # TODO\n",
     "\n",
     "    def __len__(self):\n",
+    "        return len(self.imgs)\n",
     "        # TODO\n",
     "\n",
     "    def __getitem__(self, idx):\n",
     "        # TODO\n",
+    "        img = self.imgs[idx]\n",
+    "        label = self.labels[idx]\n",
+    "        bbox = self.bboxes[idx]\n",
+    "        if self.transform:\n",
+    "            img = self.transform(img)\n",
+    "        return img, label, bbox\n",
     "\n",
-    "        return img, label, bbox"
-   ],
-   "id": "fa0e6dca86c52550"
+    "from torch import nn\n",
+    "from torchvision import models, transforms\n",
+    "\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.ToTensor(),\n",
+    "])\n",
+    "my_dataset = EstrellesDataset(transforms=None)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "64bb33f8c3c2b2c2",
+   "metadata": {},
    "source": [
     "## Preparació del model\n",
     "\n",
     "Començarem carregant el model VGG16 preentrenat i adaptant-lo per a la detecció d'objectes. Afegirem capes addicionals per predir les caixes delimitadores (bounding boxes) i les classes dels objectes."
-   ],
-   "id": "64bb33f8c3c2b2c2"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "aad962e20c6a21ac",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from torch import nn\n",
     "from torchvision import models, transforms\n",
@@ -82,8 +142,15 @@
     "        return class_logits, bbox_preds\n",
     "\n",
     "VGG16ObjectDetector(backbone=backbone)"
-   ],
-   "id": "aad962e20c6a21ac"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58d0e666",
+   "metadata": {},
+   "source": [
+    "sortida de classificació i una altra de regressió de bounding box."
+   ]
   }
  ],
  "metadata": {
@@ -95,14 +162,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
